# blog-post-writer-using-multi-agents-ai-system

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml  what-is-llm-multi-agents-and-how-to-create-blog-post-using-crewai.md
backend/app/: main.py
backend/app/clients/: __init__.py  websocket_manager.py
backend/app/common/: .env.sample  base_schema.py  config.py  constant.py  singleton.py
backend/app/databases/mysql/: __init__.py  conn.py
backend/app/databases/mysql/models/: __init__.py  blog.py  source_url.py  sub_topic_report.py
backend/app/errors/: exceptions.py  handlers.py
backend/app/modules/: api.py
backend/app/modules/blog_poster/: router.py  schema.py  service.py
backend/app/modules/health/: router.py
backend/app/utils/: logger.py
blog_poster/: processor.py  prompts.py
blog_poster/agents/: __init__.py  base.py  blog_agent.py
blog_poster/agents/schema/: entity.py
blog_poster/config/: .env.sample  __init__.py  settings.py
blog_poster/context/: __init__.py  compression.py  retriever.py
blog_poster/embedding/: embeddings.py
blog_poster/embedding/providers/: __init__.py  sentence.py
blog_poster/llm/: llm.py
blog_poster/llm/providers/: base.py  openai.py
blog_poster/retriever/: __init__.py  retreiver.py
blog_poster/retriever/providers/: __init__.py  base.py  duckduckgo.py
blog_poster/scraper/: scraper.py
blog_poster/scraper/providers/: __init__.py  arxiv.py  beautiful_soup.py  newspaper.py  pymupdf.py  web_base_loader.py
blog_poster/utils/: __init__.py  actions.py  costs.py  enum.py  langfuse_callback.py  logger.py
config/: .env.sample  settings.py
docker/: .env.sample
docker/db/migrate/: access.setting.sql  create.blog_poster.db.sql
modules/: tasks.py
modules/agents/: __init__.py  base.py  editor.py  researcher.py
modules/agents/writers/: __init__.py  conclusion.py  introduction.py  main_text.py
modules/config/: .env.sample  __init__.py  defs.py  settings.py
modules/graph/: schema.py
notebooks/: blog_poster.ipynb  markdown.ipynb  thought.ipynb
resources/: introduction-of-multi-agents-ai-system-like-crewai.md
