[tool.poetry]
name = "crew"
version = "0.1.0"
description = ""
authors = ["y9yk <andrew.yk82@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
unstructured = '==0.10.25'
tools = "^0.1.9"
tasks = "^2.8.0"
pydantic-settings = "^2.0.3"
click = "^8.1.7"
pytz = "^2024.1"
langgraph = "0.0.50"
loguru = "^0.7.2"
markdown-to-json = "^2.1.1"
sentence-transformers = [
    {version = "2.5.1", platform = "darwin"},
    {extras = ["cpu"], version = "2.5.1", platform = "linux"}
]
torch = [
    {version = "2.1.2", source = "pypi", platform = "darwin"},
    {version = "2.1.2", source = "pytorch_cpu", platform = "linux"}
]
transformers = [
    {version = "4.38.2", platform = "darwin"},
    {extras = ["cpu"], version = "4.38.2", platform = "linux"}

]
duckduckgo-search = "^6.1.12"
arxiv = "^2.1.3"
crewai = "^0.36.1"
json-repair = "^0.25.3"
markdown = "^3.6"
langfuse = "^2.39.1"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
sqlalchemy = "^2.0.31"
asyncmy = "^0.2.9"
pymysql = "^1.1.1"
greenlet = "^3.0.3"

[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
black = "^23.11.0"
isort = "^5.12.0"
makefile = "^1.1.0"
pre-commit = "^3.5.0"

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"
include_trailing_comma = true
multi_line_output = 3
py_version = 310
skip = ["__init__.py"]
skip_glob = ["resources/*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"